--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,10 @@
+2024-07-09 Version: v1.1.0
+- Support API CreateImageAnalyzeTask.
+- Support API GetImageAnalyzeTaskStatus.
+- Support API GetQueryAnalysis.
+- Update API GetDocumentAnalyzeTaskStatus: update response param.
+
+
 2024-06-21 Version: v1.0.0
 - Generated golang 2024-05-29 for Searchplat.
 
