--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,10 @@
+2024-09-12 Version: v1.2.0
+- Support API CreateImageAnalyzeTask.
+- Support API GetImageAnalyzeTaskStatus.
+- Support API GetQueryAnalysis.
+- Update API GetDocumentAnalyzeTaskStatus: update response param.
+
+
 2024-07-09 Version: v1.1.0
 - Support API CreateImageAnalyzeTask.
 - Support API GetImageAnalyzeTaskStatus.
