--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2024-11-15 Version: v1.3.0
+- Support API GetEmbeddingTuning.
+
+
 2024-09-12 Version: v1.2.0
 - Support API CreateImageAnalyzeTask.
 - Support API GetImageAnalyzeTaskStatus.
