--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+2025-01-06 Version: v1.4.0
+- Support API GetEmbeddingTuning.
+- Support API GetPrediction.
+
+
 2024-11-15 Version: v1.3.0
 - Support API GetEmbeddingTuning.
 
