--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+2025-03-21 Version: v2.0.0
+- Support API GetWebSearch.
+- Update API GetTextGeneration: update param body.
+- Update API GetTextGeneration: update response param.
+
+
 2025-01-06 Version: v1.4.0
 - Support API GetEmbeddingTuning.
 - Support API GetPrediction.
