--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2025-05-20 Version: v2.1.0
+- Support API GetMultiModalEmbedding.
+
+
 2025-04-09 Version: v2.0.1
 - Update API CreateDocumentAnalyzeTask: add request parameters body.strategy.
 
